--- a/GettingStarted/package.json
+++ b/GettingStarted/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "moment-timezone": "^0.5.5",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
